$Id$

*** Note: Please add new entries to the top of this file. ***
-------------------------------------------------------------------------------

- add support for user-customizable captive portal logout and status page,
  as well as a password change option for local CP users
  (contributed by Stephane Billiart)

- don't let missing DNS server information keep DHCPD from starting


1.32
----

- allow both a v4 and a v6 entry for the same host in DNS forwarder overrides

- fix nameserver handling when IPv6 PPP WAN is enabled

- Fix auto suggested ipv6 address.

- add wildcard information text for dns forwarder

- add Farenheit support for system temperatures.

- add kernel patch for vr(4) lockups after link flaps (e.g. on ALIX boards)

- Add support for dns forward wildcard, use * as hostname
- Add SixXS interface to traffic Graph

---
- Update text for WAN RA, to suggest this is normally off
- Fix ipv6 link local filter rule, missing newline
- Fix dhcpv4 having ipv6 address inserted in dhcpd.conf
- Make motherboard monitor off by default, and switchable in advanced/misc.

1.31
----
- added patch to ISC-DHCPD to rewrite lease file every 5 minutes instead of
  every hour

- added fix for OpenSSL session renegotiation vulnerability

---
- tidy page description in group manager for interfaces_secondaries.php
- change auth.inc so when reaching an authorized page you get a message before redirect to /index.php 
  more intuitive, especially when sub pages are denied as the links to them are are displayed.
---
- add mbmon system fans/temp monitoring, requires /usr/local/bin/mbmon 
  will work with a reasonable % of pc hardware, won't work on soekris/alix etc.
---
- add option to disable spoof check on Bridge, removal of filtered bridge
  causes non-m0n0wall dhcp servers to break, and some multicast traffic.
---
- fix to WAN dhcp, cleanup dhclient pid and specify dhclient-script location.
---
- fix to adding dhcpv6 reservation is also added to dhcpv4